--- a/package.json
+++ b/package.json
@@ -18,4 +18,15 @@
     "express-session": "^1.18.2",
     "mongoose": "^9.0.2"
   }
+  ,{
+  "name": "battery-dashboard",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
+}
 }
