--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ,{
   "name": "battery-dashboard",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
